[workspace]
members = [
  "src/beastdb",
  "src/driver_beastdb",
  "src/driver_go",
  "src/driver_tikv_server",
  "src/persona",
]
default-members = ["src/beastdb"]
exclude = ["src/tikv"]

# Keep in sync with src/tikv/Cargo.toml
[replace]
"log:0.3.9" = { git = "https://github.com/busyjay/log", branch = "use-static-module" }
"log:0.4.6" = { git = "https://github.com/busyjay/log", branch = "revert-to-static" }
